--- a/build-QAnn-Desktop-Debug/Makefile
+++ b/build-QAnn-Desktop-Debug/Makefile
@@ -12,10 +12,10 @@ MAKEFILE      = Makefile
 
 CC            = gcc
 CXX           = g++
-DEFINES       = -DQT_DEPRECATED_WARNINGS -DQ_version -DARMA_USE_LAPACK -DARMA_USE_BLAS -DQT_QML_DEBUG -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_CORE_LIB
+DEFINES       = -DQT_DEPRECATED_WARNINGS -DQ_version -DARMA_USE_LAPACK -DARMA_USE_BLAS -DQT_QML_DEBUG -DQT_PRINTSUPPORT_LIB -DQT_WIDGETS_LIB -DQT_GUI_LIB -DQT_CORE_LIB
 CFLAGS        = -pipe -g -Wall -W -D_REENTRANT -fPIC $(DEFINES)
 CXXFLAGS      = -pipe -g -std=gnu++1y -Wall -W -D_REENTRANT -fPIC $(DEFINES)
-INCPATH       = -I../QAnn -I. -I../include -isystem /usr/include/x86_64-linux-gnu/qt5 -isystem /usr/include/x86_64-linux-gnu/qt5/QtWidgets -isystem /usr/include/x86_64-linux-gnu/qt5/QtGui -isystem /usr/include/x86_64-linux-gnu/qt5/QtCore -I. -isystem /usr/include/libdrm -I. -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++
+INCPATH       = -I../QAnn -I. -I../include -I../../qcustomplot -isystem /usr/include/x86_64-linux-gnu/qt5 -isystem /usr/include/x86_64-linux-gnu/qt5/QtPrintSupport -isystem /usr/include/x86_64-linux-gnu/qt5/QtWidgets -isystem /usr/include/x86_64-linux-gnu/qt5/QtGui -isystem /usr/include/x86_64-linux-gnu/qt5/QtCore -I. -isystem /usr/include/libdrm -I. -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++
 QMAKE         = /usr/lib/qt5/bin/qmake
 DEL_FILE      = rm -f
 CHK_DIR_EXISTS= test -d
@@ -38,7 +38,7 @@ DISTNAME      = QAnn1.0.0
 DISTDIR = /home/arash/Projects/ANNplusplus/build-QAnn-Desktop-Debug/.tmp/QAnn1.0.0
 LINK          = g++
 LFLAGS        = 
-LIBS          = $(SUBLIBS) -larmadillo -llapack -lblas -lQt5Widgets -lQt5Gui -lQt5Core -lGL -lpthread 
+LIBS          = $(SUBLIBS) -larmadillo -llapack -lblas -lQt5PrintSupport -lQt5Widgets -lQt5Gui -lQt5Core -lGL -lpthread 
 AR            = ar cqs
 RANLIB        = 
 SED           = sed
@@ -50,7 +50,8 @@ OBJECTS_DIR   = ./
 
 ####### Files
 
-SOURCES       = ../src/ANN_class.cpp \
+SOURCES       = ../../qcustomplot/qcustomplot.cpp \
+		../src/ANN_class.cpp \
 		../src/BTC.cpp \
 		../src/BTCSet.cpp \
 		../src/DistributionNUnif.cpp \
@@ -65,10 +66,14 @@ SOURCES       = ../src/ANN_class.cpp \
 		../src/Vector.cpp \
 		../src/Vector_arma.cpp \
 		../src/errorhandler.cpp \
+		../src/plotter.cpp \
 		../src/utils.cpp \
 		../QAnn/main.cpp \
-		../QAnn/mainwindow.cpp moc_mainwindow.cpp
-OBJECTS       = ANN_class.o \
+		../QAnn/mainwindow.cpp moc_qcustomplot.cpp \
+		moc_plotter.cpp \
+		moc_mainwindow.cpp
+OBJECTS       = qcustomplot.o \
+		ANN_class.o \
 		BTC.o \
 		BTCSet.o \
 		DistributionNUnif.o \
@@ -83,9 +88,12 @@ OBJECTS       = ANN_class.o \
 		Vector.o \
 		Vector_arma.o \
 		errorhandler.o \
+		plotter.o \
 		utils.o \
 		main.o \
 		mainwindow.o \
+		moc_qcustomplot.o \
+		moc_plotter.o \
 		moc_mainwindow.o
 DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/common/unix.conf \
@@ -161,7 +169,8 @@ DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/exceptions.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/yacc.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/lex.prf \
-		../QAnn/QAnn.pro ../include/ANN_class.h \
+		../QAnn/QAnn.pro ../../qcustomplot/qcustomplot.h \
+		../include/ANN_class.h \
 		../include/BTC.h \
 		../include/BTCSet.h \
 		../include/DistributionNUnif.h \
@@ -176,8 +185,10 @@ DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		../include/StringOP.h \
 		../include/Vector.h \
 		../include/Vector_arma.h \
+		../include/plotter.h \
 		../include/utils.h \
-		../QAnn/mainwindow.h ../src/ANN_class.cpp \
+		../QAnn/mainwindow.h ../../qcustomplot/qcustomplot.cpp \
+		../src/ANN_class.cpp \
 		../src/BTC.cpp \
 		../src/BTCSet.cpp \
 		../src/DistributionNUnif.cpp \
@@ -192,6 +203,7 @@ DIST          = /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
 		../src/Vector.cpp \
 		../src/Vector_arma.cpp \
 		../src/errorhandler.cpp \
+		../src/plotter.cpp \
 		../src/utils.cpp \
 		../QAnn/main.cpp \
 		../QAnn/mainwindow.cpp
@@ -203,7 +215,7 @@ TARGET        = QAnn
 first: all
 ####### Build rules
 
-$(TARGET): ui_mainwindow.h $(OBJECTS)  
+$(TARGET): ui_mainwindow.h ui_plotter.h $(OBJECTS)  
 	$(LINK) $(LFLAGS) -o $(TARGET) $(OBJECTS) $(OBJCOMP) $(LIBS)
 
 Makefile: ../QAnn/QAnn.pro /usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++/qmake.conf /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/spec_pre.prf \
@@ -281,6 +293,7 @@ Makefile: ../QAnn/QAnn.pro /usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++/qmake
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/yacc.prf \
 		/usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/lex.prf \
 		../QAnn/QAnn.pro \
+		/usr/lib/x86_64-linux-gnu/libQt5PrintSupport.prl \
 		/usr/lib/x86_64-linux-gnu/libQt5Widgets.prl \
 		/usr/lib/x86_64-linux-gnu/libQt5Gui.prl \
 		/usr/lib/x86_64-linux-gnu/libQt5Core.prl
@@ -360,6 +373,7 @@ Makefile: ../QAnn/QAnn.pro /usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++/qmake
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/yacc.prf:
 /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/lex.prf:
 ../QAnn/QAnn.pro:
+/usr/lib/x86_64-linux-gnu/libQt5PrintSupport.prl:
 /usr/lib/x86_64-linux-gnu/libQt5Widgets.prl:
 /usr/lib/x86_64-linux-gnu/libQt5Gui.prl:
 /usr/lib/x86_64-linux-gnu/libQt5Core.prl:
@@ -378,9 +392,9 @@ distdir: FORCE
 	@test -d $(DISTDIR) || mkdir -p $(DISTDIR)
 	$(COPY_FILE) --parents $(DIST) $(DISTDIR)/
 	$(COPY_FILE) --parents /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp $(DISTDIR)/
-	$(COPY_FILE) --parents ../include/ANN_class.h ../include/BTC.h ../include/BTCSet.h ../include/DistributionNUnif.h ../include/ErrorHandler.h ../include/Link.h ../include/ML.h ../include/Matrix.h ../include/Matrix_arma.h ../include/Node.h ../include/NormalDist.h ../include/QuickSort.h ../include/StringOP.h ../include/Vector.h ../include/Vector_arma.h ../include/utils.h ../QAnn/mainwindow.h $(DISTDIR)/
-	$(COPY_FILE) --parents ../src/ANN_class.cpp ../src/BTC.cpp ../src/BTCSet.cpp ../src/DistributionNUnif.cpp ../src/Link.cpp ../src/ML.cpp ../src/Matrix.cpp ../src/Matrix_arma.cpp ../src/Node.cpp ../src/NormalDist.cpp ../src/QuickSort.cpp ../src/StringOP.cpp ../src/Vector.cpp ../src/Vector_arma.cpp ../src/errorhandler.cpp ../src/utils.cpp ../QAnn/main.cpp ../QAnn/mainwindow.cpp $(DISTDIR)/
-	$(COPY_FILE) --parents ../QAnn/mainwindow.ui $(DISTDIR)/
+	$(COPY_FILE) --parents ../../qcustomplot/qcustomplot.h ../include/ANN_class.h ../include/BTC.h ../include/BTCSet.h ../include/DistributionNUnif.h ../include/ErrorHandler.h ../include/Link.h ../include/ML.h ../include/Matrix.h ../include/Matrix_arma.h ../include/Node.h ../include/NormalDist.h ../include/QuickSort.h ../include/StringOP.h ../include/Vector.h ../include/Vector_arma.h ../include/plotter.h ../include/utils.h ../QAnn/mainwindow.h $(DISTDIR)/
+	$(COPY_FILE) --parents ../../qcustomplot/qcustomplot.cpp ../src/ANN_class.cpp ../src/BTC.cpp ../src/BTCSet.cpp ../src/DistributionNUnif.cpp ../src/Link.cpp ../src/ML.cpp ../src/Matrix.cpp ../src/Matrix_arma.cpp ../src/Node.cpp ../src/NormalDist.cpp ../src/QuickSort.cpp ../src/StringOP.cpp ../src/Vector.cpp ../src/Vector_arma.cpp ../src/errorhandler.cpp ../src/plotter.cpp ../src/utils.cpp ../QAnn/main.cpp ../QAnn/mainwindow.cpp $(DISTDIR)/
+	$(COPY_FILE) --parents ../QAnn/mainwindow.ui ../QAnn/plotter.ui $(DISTDIR)/
 
 
 clean: compiler_clean 
@@ -412,9 +426,28 @@ compiler_moc_predefs_clean:
 moc_predefs.h: /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp
 	g++ -pipe -g -std=gnu++1y -Wall -W -dM -E -o moc_predefs.h /usr/lib/x86_64-linux-gnu/qt5/mkspecs/features/data/dummy.cpp
 
-compiler_moc_header_make_all: moc_mainwindow.cpp
+compiler_moc_header_make_all: moc_qcustomplot.cpp moc_plotter.cpp moc_mainwindow.cpp
 compiler_moc_header_clean:
-	-$(DEL_FILE) moc_mainwindow.cpp
+	-$(DEL_FILE) moc_qcustomplot.cpp moc_plotter.cpp moc_mainwindow.cpp
+moc_qcustomplot.cpp: ../../qcustomplot/qcustomplot.h \
+		moc_predefs.h \
+		/usr/lib/qt5/bin/moc
+	/usr/lib/qt5/bin/moc $(DEFINES) --include ./moc_predefs.h -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I/home/arash/Projects/ANNplusplus/QAnn -I/home/arash/Projects/ANNplusplus/include -I/home/arash/Projects/qcustomplot -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtPrintSupport -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I/usr/include/c++/7 -I/usr/include/x86_64-linux-gnu/c++/7 -I/usr/include/c++/7/backward -I/usr/lib/gcc/x86_64-linux-gnu/7/include -I/usr/local/include -I/usr/lib/gcc/x86_64-linux-gnu/7/include-fixed -I/usr/include/x86_64-linux-gnu -I/usr/include ../../qcustomplot/qcustomplot.h -o moc_qcustomplot.cpp
+
+moc_plotter.cpp: ../include/BTCSet.h \
+		../include/BTC.h \
+		../include/QuickSort.h \
+		../include/NormalDist.h \
+		../include/Vector.h \
+		../include/Matrix.h \
+		../include/Matrix_arma.h \
+		../include/Vector_arma.h \
+		../../qcustomplot/qcustomplot.h \
+		../include/plotter.h \
+		moc_predefs.h \
+		/usr/lib/qt5/bin/moc
+	/usr/lib/qt5/bin/moc $(DEFINES) --include ./moc_predefs.h -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I/home/arash/Projects/ANNplusplus/QAnn -I/home/arash/Projects/ANNplusplus/include -I/home/arash/Projects/qcustomplot -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtPrintSupport -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I/usr/include/c++/7 -I/usr/include/x86_64-linux-gnu/c++/7 -I/usr/include/c++/7/backward -I/usr/lib/gcc/x86_64-linux-gnu/7/include -I/usr/local/include -I/usr/lib/gcc/x86_64-linux-gnu/7/include-fixed -I/usr/include/x86_64-linux-gnu -I/usr/include ../include/plotter.h -o moc_plotter.cpp
+
 moc_mainwindow.cpp: ../include/ANN_class.h \
 		../include/Node.h \
 		../include/BTC.h \
@@ -430,16 +463,20 @@ moc_mainwindow.cpp: ../include/ANN_class.h \
 		../QAnn/mainwindow.h \
 		moc_predefs.h \
 		/usr/lib/qt5/bin/moc
-	/usr/lib/qt5/bin/moc $(DEFINES) --include ./moc_predefs.h -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I/home/arash/Projects/ANNplusplus/QAnn -I/home/arash/Projects/ANNplusplus/include -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I/usr/include/c++/7 -I/usr/include/x86_64-linux-gnu/c++/7 -I/usr/include/c++/7/backward -I/usr/lib/gcc/x86_64-linux-gnu/7/include -I/usr/local/include -I/usr/lib/gcc/x86_64-linux-gnu/7/include-fixed -I/usr/include/x86_64-linux-gnu -I/usr/include ../QAnn/mainwindow.h -o moc_mainwindow.cpp
+	/usr/lib/qt5/bin/moc $(DEFINES) --include ./moc_predefs.h -I/usr/lib/x86_64-linux-gnu/qt5/mkspecs/linux-g++ -I/home/arash/Projects/ANNplusplus/QAnn -I/home/arash/Projects/ANNplusplus/include -I/home/arash/Projects/qcustomplot -I/usr/include/x86_64-linux-gnu/qt5 -I/usr/include/x86_64-linux-gnu/qt5/QtPrintSupport -I/usr/include/x86_64-linux-gnu/qt5/QtWidgets -I/usr/include/x86_64-linux-gnu/qt5/QtGui -I/usr/include/x86_64-linux-gnu/qt5/QtCore -I. -I/usr/include/c++/7 -I/usr/include/x86_64-linux-gnu/c++/7 -I/usr/include/c++/7/backward -I/usr/lib/gcc/x86_64-linux-gnu/7/include -I/usr/local/include -I/usr/lib/gcc/x86_64-linux-gnu/7/include-fixed -I/usr/include/x86_64-linux-gnu -I/usr/include ../QAnn/mainwindow.h -o moc_mainwindow.cpp
 
 compiler_moc_source_make_all:
 compiler_moc_source_clean:
-compiler_uic_make_all: ui_mainwindow.h
+compiler_uic_make_all: ui_mainwindow.h ui_plotter.h
 compiler_uic_clean:
-	-$(DEL_FILE) ui_mainwindow.h
+	-$(DEL_FILE) ui_mainwindow.h ui_plotter.h
 ui_mainwindow.h: ../QAnn/mainwindow.ui \
 		/usr/lib/qt5/bin/uic
 	/usr/lib/qt5/bin/uic ../QAnn/mainwindow.ui -o ui_mainwindow.h
+
+ui_plotter.h: ../QAnn/plotter.ui \
+		/usr/lib/qt5/bin/uic
+	/usr/lib/qt5/bin/uic ../QAnn/plotter.ui -o ui_plotter.h
 
 compiler_yacc_decl_make_all:
 compiler_yacc_decl_clean:
@@ -450,6 +487,9 @@ compiler_lex_clean:
 compiler_clean: compiler_moc_predefs_clean compiler_moc_header_clean compiler_uic_clean 
 
 ####### Compile
+
+qcustomplot.o: ../../qcustomplot/qcustomplot.cpp ../../qcustomplot/qcustomplot.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o qcustomplot.o ../../qcustomplot/qcustomplot.cpp
 
 ANN_class.o: ../src/ANN_class.cpp ../include/ANN_class.h \
 		../include/Node.h \
@@ -565,7 +605,8 @@ Vector.o: ../src/Vector.cpp ../include/Vector.h \
 		../include/Matrix.h \
 		../include/Matrix_arma.h \
 		../include/Vector_arma.h \
-		../include/utils.h
+		../include/utils.h \
+		../include/NormalDist.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o Vector.o ../src/Vector.cpp
 
 Vector_arma.o: ../src/Vector_arma.cpp ../include/Vector_arma.h \
@@ -581,15 +622,30 @@ errorhandler.o: ../src/errorhandler.cpp ../include/ErrorHandler.h \
 		../include/QuickSort.h \
 		../include/Vector_arma.h \
 		../include/Matrix.h \
-		../include/Matrix_arma.h
+		../include/Matrix_arma.h \
+		../include/NormalDist.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o errorhandler.o ../src/errorhandler.cpp
+
+plotter.o: ../src/plotter.cpp ../include/plotter.h \
+		../include/BTCSet.h \
+		../include/BTC.h \
+		../include/QuickSort.h \
+		../include/NormalDist.h \
+		../include/Vector.h \
+		../include/Matrix.h \
+		../include/Matrix_arma.h \
+		../include/Vector_arma.h \
+		../../qcustomplot/qcustomplot.h \
+		ui_plotter.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o plotter.o ../src/plotter.cpp
 
 utils.o: ../src/utils.cpp ../include/utils.h \
 		../include/Vector.h \
 		../include/QuickSort.h \
 		../include/Vector_arma.h \
 		../include/Matrix.h \
-		../include/Matrix_arma.h
+		../include/Matrix_arma.h \
+		../include/NormalDist.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o utils.o ../src/utils.cpp
 
 main.o: ../QAnn/main.cpp ../QAnn/mainwindow.h \
@@ -622,8 +678,16 @@ mainwindow.o: ../QAnn/mainwindow.cpp ../QAnn/mainwindow.h \
 		../include/ErrorHandler.h \
 		ui_mainwindow.h \
 		../include/utils.h \
-		../include/ML.h
+		../include/ML.h \
+		../include/plotter.h \
+		../../qcustomplot/qcustomplot.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o mainwindow.o ../QAnn/mainwindow.cpp
+
+moc_qcustomplot.o: moc_qcustomplot.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_qcustomplot.o moc_qcustomplot.cpp
+
+moc_plotter.o: moc_plotter.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_plotter.o moc_plotter.cpp
 
 moc_mainwindow.o: moc_mainwindow.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_mainwindow.o moc_mainwindow.cpp
